--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="shorcut icon" href="/static/rdt.png" />
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 html, header, body {background-color:	#F0FFF0}
@@ -13,6 +14,7 @@ h1 {text-align:center;}
 h4,p {text-align:center}
 form {justify-content:center}
 .center_btn {text-align:center}
+button:hover {cursor: pointer; opacity: 0.9;}
 </style>
 <body class="w3-light-grey">
 
@@ -25,13 +27,14 @@ and is wrapped around the whole page content, except for the footer in this exam
 <!-- Introduction menu -->
 <div class="w3-col" id="main_contents">
     <h1><b>Subreddit Recommender</b></h1>
-
+    <p><button id="gh" onclick="window.open('https://github.com/nalimuradov/Subreddit_Recommender')"><img src="static/gh.png" height="25px"></button></p>
     <h4>Enter the name of a subreddit: </h4>
     <p><em>Without the /r/ at the beginning...</em></p>
     <form action="{{ url_for('display')}}" method="post">
         <div class="center_btn">
         <input type="text" name="similar">
         <button type="submit" id="tag_btn" id="btn_predict" class="btn btn-primary">Enter</button>
+            <p><b>Case-Sensitive!</b></p>
             </div>
     </form>
     <h4>Or pick one of these sample subreddits: </h4>
