--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,18 @@
 <link rel="shorcut icon" href="/static/rdt.png" />
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-html, header, body {background-color:	#F0FFF0}
 h1 {text-align:center;}
 #main_contents: {margin-left:auto; margin-right:auto; text-align:center;}
 h4,p {text-align:center}
 form {justify-content:center}
 .center_btn {text-align:center}
 button:hover {cursor: pointer; opacity: 0.9;}
+
+html, header, body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 500% 500%;
+}
+
 </style>
 <body class="w3-light-grey">
 
