--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,6 @@
 <link rel="shorcut icon" href="/static/rdt.png" />
 <style>
 body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-html, header, body {background-color:	#F0FFF0}
 #count {font-size:24px;}
 h1 {text-align:center;}
 #main_contents: {margin-left:auto; margin-right:auto;}
@@ -21,7 +20,10 @@ form {justify-content:center}
 #use_as_main {align-items:center;}
 button:hover {cursor: pointer; opacity: 0.9;}
 #name {margin-left: 20px;}
-
+html, header, body {
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 500% 500%;
+}
 </style>
 <body class="w3-light-grey">
 
