--- a/templates/index.html
+++ b/templates/index.html
@@ -6,25 +6,28 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="shorcut icon" href="/static/rdt.png" />
+
 <style>
-body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
-#count {font-size:24px;}
-h1 {text-align:center;}
-#main_contents: {margin-left:auto; margin-right:auto;}
-h4,p {text-align:center}
-form {justify-content:center}
-.center_btn {text-align:center}
-#main_card, #main_list, #main_contents {margin:auto; justify-content:center;}
-#lower_card {margin-left:auto; margin-right:auto; min-width: 500px;}
-#link_sr {float:right;}
-#use_as_main {align-items:center;}
-button:hover {cursor: pointer; opacity: 0.9;}
-#name {margin-left: 20px;}
-html, header, body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-	background-size: 500% 500%;
-}
+	#count {font-size:24px;}
+	#main_contents: {margin-left:auto; margin-right:auto;
+	#main_card, #main_list, #main_contents {margin:auto; justify-content:center;}
+	#lower_card {margin-left:auto; margin-right:auto; min-width: 500px;}
+	#link_sr {float:right;}
+	#use_as_main {align-items:center;}
+	#name {margin-left: 20px;}
+		
+	body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+	h1 {text-align:center;}
+	h4,p {text-align:center}
+	form {justify-content:center}
+	.center_btn {text-align:center}
+	button:hover {cursor: pointer; opacity: 0.9;}
+	html, header, body {
+		background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+		background-size: 500% 500%;
+	}
 </style>
+	
 <body class="w3-light-grey">
 
 <div class="w3-content" style="max-width:1400px">
